src/objects/auOrganization__c.object
<CustomObject>
    <description>KDDI株式会社 
C事業本部 : Sector
／C営業本部  Division
 ／Cサポート推進部 Department
  　/ナレッジマネジメント室  Section
    ／セールスバリュー推進G  Group
／Cマーケティング本部  Division
  /コンシューマエクスペリエンス推進部 Department
   /推進グループ Group

北海道支社 : Regional Office
 / 札幌支店: Branch</description>
    <fields>
        <fullName>BranchCode__c</fullName>
        <externalId>true</externalId>
        <label>支店コード</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BranchName__c</fullName>
        <label>支店名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>マスタ区分</label>
        <picklist>
            <picklistValues>
                <fullName>支社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>支店</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>統括本部</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>本部</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>部</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>室</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>グループ</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DeactivateDate__c</fullName>
        <label>廃止日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DepartmentCode__c</fullName>
        <externalId>true</externalId>
        <label>部署コード</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RegionalOfficeCode__c</fullName>
        <externalId>true</externalId>
        <label>支社コード</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionalOfficeName__c</fullName>
        <label>支社名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortNo__c</fullName>
        <label>順番</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>組織マスタ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DepartmentCode__c</columns>
        <columns>Category__c</columns>
        <columns>RegionalOfficeName__c</columns>
        <columns>BranchName__c</columns>
        <columns>DeactivateDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>部署名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>